--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,8 +33,13 @@
 }
 
 body {
+	font-family: "oswald";
 	-webkit-transition: color cubic-bezier(0.86, 0, 0.07, 1) 500ms;
 	transition: color cubic-bezier(0.86, 0, 0.07, 1) 500ms;
 	-webkit-transition: background cubic-bezier(0.86, 0, 0.07, 1) 500ms;
 	transition: background cubic-bezier(0.86, 0, 0.07, 1) 500ms;
+}
+
+.montserrat {
+	font-family: "montserrat";
 }
