--- a/src/styles/frame.css
+++ b/src/styles/frame.css
@@ -7,7 +7,19 @@
 	padding: 30px;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	z-index: 2;
+}
+
+.top-nav::before {
+	position: absolute;
+	width: calc(100vw - 180px);
+	margin-left: 65px;
+	content: "";
+	display: block;
+	height: 2px;
+	border-radius: 2px;
+	background-color: #fca311;
 }
 
 .logo {
@@ -21,6 +33,8 @@
 }
 
 .dark-mode-toggle {
+	height: 32px;
+	padding-right: 5px;
 	cursor: pointer;
 }
 
@@ -63,7 +77,8 @@
 	text-decoration: none;
 }
 
-.left-nav::after {
+.left-nav::after,
+.left-nav::before {
 	content: "";
 	display: block;
 	width: 2px;
@@ -74,13 +89,26 @@
 	background-color: #fca311;
 }
 
-.right-nav::after {
+.left-nav::before {
+	height: calc(100vh - 530px);
+	margin-top: 0px;
+	margin-bottom: 15px;
+}
+
+.right-nav::after,
+.right-nav::before {
 	content: "";
 	display: block;
 	width: 2px;
 	height: 240px;
 	border-radius: 2px;
 	margin: 0px 19px;
-	margin-top: 40px;
+	margin-top: 30px;
 	background-color: #fca311;
+}
+
+.right-nav::before {
+	height: calc(100vh - 550px);
+	margin-bottom: 30px;
+	margin-top: 0px;
 }
