--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,6 @@
 }
 
 .full-page > div {
-	text-align: center;
 	opacity: 1;
 	-webkit-transition: opacity cubic-bezier(0.86, 0, 0.07, 1) 800ms;
 	transition: opacity cubic-bezier(0.86, 0, 0.07, 1) 800ms;
@@ -42,4 +41,14 @@ body {
 
 .montserrat {
 	font-family: "montserrat";
+}
+
+.app-button {
+	padding: 20px 40px;
+	background-color: transparent;
+	border: 2px solid transparent;
+	border-radius: 20px;
+	text-transform: uppercase;
+	font-family: "montserrat";
+	cursor: pointer;
 }
