--- a/styles/toolbox.module.css
+++ b/styles/toolbox.module.css
@@ -18,6 +18,12 @@
 	font-size: 20px;
 }
 
+.container > div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .headingBox {
 	width: 100%;
 }
@@ -32,14 +38,33 @@
 
 .toolbox img {
 	height: 5vw;
-	min-height: 50px;
+	min-height: 40px;
 	margin: 15px;
 	opacity: 0;
 	transition: ease-in-out 300ms;
 	-webkit-transition: ease-in-out 300ms;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 400px) {
+	.container h1 {
+		font-size: 32px;
+	}
+
+	.container h4 {
+		font-size: 16px;
+	}
+
+	.toolbox {
+		margin-top: 35px;
+		width: calc(100% + 20px);
+	}
+
+	.toolbox img {
+		margin: 10px;
+	}
+}
+
+@media only screen and (min-width: 900px) {
 	.container h1 {
 		font-size: 48px;
 	}
