--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -6,7 +6,7 @@
 
 .sideLine {
 	flex: 1;
-	margin: 28px 20px;
+	margin: 23px 20px;
 }
 
 .sideLine > div {
@@ -29,7 +29,7 @@
 }
 
 .social {
-	margin: 15px;
+	margin: 11px;
 }
 
 .emailLink a:hover {
@@ -41,28 +41,63 @@
 }
 
 .getInTouch {
-	width: calc(100% - 80px);
+	width: calc(100% - 60px);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 40px;
+	padding: 30px;
 	text-align: center;
 }
 
 .getInTouch h2 {
-	font-size: 48px;
+	font-size: 40px;
 	font-family: "Montserrat";
 	color: #00a9a5;
 }
 
 .getInTouch h4 {
-	font-size: 24px;
-	line-height: 40px;
+	font-size: 20px;
+	line-height: 32px;
 	margin: 10px 0px;
+}
+
+@media only screen and (max-width: 400px) {
+	.getInTouch h4 {
+		font-size: 16px;
+		line-height: 25px;
+	}
+
+	.getInTouch h2 {
+		font-size: 32px;
+	}
+
+	.getInTouch {
+		width: calc(100% - 40px);
+		padding: 20px;
+	}
+
+	.social {
+		margin: 7px;
+	}
 }
 
 @media only screen and (min-width: 800px) {
 	.getInTouch h4 {
 		margin: 10px 20vw;
+		font-size: 24px;
+		line-height: 40px;
+	}
+
+	.getInTouch h2 {
+		font-size: 48px;
+	}
+
+	.getInTouch {
+		width: calc(100% - 80px);
+		padding: 40px;
+	}
+
+	.social {
+		margin: 15px;
 	}
 }
