--- a/styles/frame.module.css
+++ b/styles/frame.module.css
@@ -80,7 +80,6 @@
 	background-color: #00a9a5;
 }
 
-.rightNav::before,
 .leftNav::before {
 	height: calc(100vh - 535px);
 	margin-top: 0px;
@@ -92,9 +91,15 @@
 	margin-top: 15px;
 }
 
+.rightNav::before {
+	margin-top: 0px;
+	margin-bottom: 15px;
+	height: calc(100vh - 560px);
+}
+
 .rightNav::after {
 	margin-top: 15px;
-	height: calc(100% - 605px);
+	height: 255px;
 }
 
 .rightNav a,
@@ -112,7 +117,7 @@
 	color: #00a9a5 !important;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 900px) {
 	.topNav {
 		padding: 30px;
 	}
