--- a/styles/intro.module.css
+++ b/styles/intro.module.css
@@ -13,16 +13,29 @@
 
 .introContainer h4 {
 	margin: 5px 0px;
-	font-size: 18px;
+	font-size: 20px;
 }
 
 .introContainer .intro {
-	margin-top: 100px;
-	margin-right: 25vw;
+	margin-top: 70px;
 	line-height: 30px;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 400px) {
+	.introContainer h1 {
+		font-size: 48px;
+	}
+
+	.introContainer h4 {
+		font-size: 16px;
+	}
+
+	.introContainer .intro {
+		margin-top: 40px;
+	}
+}
+
+@media only screen and (min-width: 900px) {
 	.introContainer {
 		padding-left: 150px;
 	}
@@ -37,5 +50,7 @@
 
 	.introContainer .intro {
 		line-height: 40px;
+		margin-top: 100px;
+		margin-right: 25vw;
 	}
 }
