--- a/styles/global.css
+++ b/styles/global.css
@@ -26,7 +26,7 @@ body {
 
 .container {
 	width: 100vw;
-	height: calc(100vh - 50px);
+	height: calc(100vh - 56px - 50px);
 	margin-top: 50px;
 	display: flex;
 	flex-direction: column;
