--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,7 @@
+@import "./constants";
+
 body {
-	font-family: "Oswald";
+	font-family: $body-font;
 	-webkit-transition: color cubic-bezier(0.86, 0, 0.07, 1) 500ms;
 	transition: color cubic-bezier(0.86, 0, 0.07, 1) 500ms;
 	-webkit-transition: background cubic-bezier(0.86, 0, 0.07, 1) 500ms;
@@ -7,21 +9,31 @@ body {
 }
 
 #typed {
-	font-size: 36px;
 	margin: 5px 0px;
 }
 
+#typed,
 .typed-cursor {
 	font-size: 36px;
+
+	@media #{$phone-info} {
+		font-size: 24px;
+	}
+
+	@media #{$desktop-info} {
+		font-size: 48px;
+	}
 }
 
-.full-page > div {
-	-webkit-transition: opacity cubic-bezier(0.86, 0, 0.07, 1) 800ms;
-	transition: opacity cubic-bezier(0.86, 0, 0.07, 1) 800ms;
-}
+.full-page {
+	& > div {
+		-webkit-transition: opacity cubic-bezier(0.86, 0, 0.07, 1) 800ms;
+		transition: opacity cubic-bezier(0.86, 0, 0.07, 1) 800ms;
+	}
 
-.full-page.invisible > div {
-	opacity: 0;
+	&.invisible > div {
+		opacity: 0;
+	}
 }
 
 .container {
@@ -35,35 +47,21 @@ body {
 
 .app-button {
 	padding: 15px 30px;
-	font-family: "Montserrat";
+	font-family: $title-font;
 	text-transform: uppercase;
 	background: none;
-	border: 2px solid #00a9a5;
+	border: 2px solid $primary;
 	border-radius: 10px;
 	margin-top: 20px;
 	cursor: pointer;
 	font-size: 12px;
 	text-decoration: none;
-}
 
-.app-button:hover {
-	background-color: #00a9a5;
-}
-
-@media only screen and (max-width: 400px) {
-	#typed,
-	.typed-cursor {
-		font-size: 24px;
-	}
-}
-
-@media only screen and (min-width: 900px) {
-	#typed,
-	.typed-cursor {
-		font-size: 48px;
+	&:hover {
+		background-color: $primary;
 	}
 
-	.app-button {
+	@media #{$desktop-info} {
 		padding: 20px 40px;
 		font-size: 16px;
 	}
