--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -58,37 +58,6 @@
 	padding: 30px;
 	text-align: center;
 
-	h2 {
-		font-size: 40px;
-		font-family: $title-font;
-		color: $primary;
-
-		@media #{$phone-info} {
-			font-size: 32px;
-		}
-
-		@media #{$desktop-info} {
-			font-size: 48px;
-		}
-	}
-
-	h4 {
-		font-size: 20px;
-		line-height: 32px;
-		margin: 10px 0px;
-
-		@media #{$phone-info} {
-			font-size: 16px;
-			line-height: 25px;
-		}
-
-		@media #{$desktop-info} {
-			margin: 10px 20vw;
-			font-size: 24px;
-			line-height: 40px;
-		}
-	}
-
 	@media #{$phone-info} {
 		width: calc(100% - 40px);
 		padding: 20px;
@@ -97,5 +66,36 @@
 	@media #{$desktop-info} {
 		width: calc(100% - 80px);
 		padding: 40px;
+	}
+}
+
+.heading {
+	font-size: 40px;
+	font-family: $title-font;
+	color: $primary;
+
+	@media #{$phone-info} {
+		font-size: 32px;
+	}
+
+	@media #{$desktop-info} {
+		font-size: 48px;
+	}
+}
+
+.sub-heading {
+	font-size: 20px;
+	line-height: 32px;
+	margin: 10px 0px;
+
+	@media #{$phone-info} {
+		font-size: 16px;
+		line-height: 25px;
+	}
+
+	@media #{$desktop-info} {
+		margin: 10px 20vw;
+		font-size: 24px;
+		line-height: 40px;
 	}
 }
