--- a/src/styles/toolbox.module.scss
+++ b/src/styles/toolbox.module.scss
@@ -5,36 +5,6 @@
 	padding-left: 30px;
 	padding-right: 30px;
 
-	h1 {
-		width: 100%;
-		font-size: 40px;
-		font-family: $title-font;
-		margin: 10px 0px;
-		color: $primary;
-
-		@media #{$phone-info} {
-			font-size: 32px;
-		}
-
-		@media #{$desktop-info} {
-			font-size: 48px;
-		}
-	}
-
-	h4 {
-		width: 100%;
-		margin: 5px 0px;
-		font-size: 20px;
-
-		@media #{$phone-info} {
-			font-size: 16px;
-		}
-
-		@media #{$desktop-info} {
-			font-size: 24px;
-		}
-	}
-
 	& > div {
 		display: flex;
 		flex-direction: column;
@@ -52,6 +22,36 @@
 
 	@media #{$desktop-info} {
 		width: calc(100% - 300px);
+	}
+}
+
+.heading {
+	width: 100%;
+	font-size: 40px;
+	font-family: $title-font;
+	margin: 10px 0px;
+	color: $primary;
+
+	@media #{$phone-info} {
+		font-size: 32px;
+	}
+
+	@media #{$desktop-info} {
+		font-size: 48px;
+	}
+}
+
+.sub-heading {
+	width: 100%;
+	margin: 5px 0px;
+	font-size: 20px;
+
+	@media #{$phone-info} {
+		font-size: 16px;
+	}
+
+	@media #{$desktop-info} {
+		font-size: 24px;
 	}
 }
 
