--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Oswald:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fjalla+One:wght@400&family=Montserrat:wght@300&display=swap");
 
 $phone-info: "only screen and (max-width: 400px)";
 $desktop-info: "only screen and (min-width: 900px)";
-$primary: #00a9a5;
-$dark: #0a111f;
+$primary: #fca311;
+$dark: #141414;
 $light: #f5f5f5;
 
-$title-font: "Montserrat", sans-serif;
-$body-font: "Oswald", monospace;
+$title-font: "Fjalla One", sans-serif;
+$body-font: "Montserrat", sans-serif;
