--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,14 +14,14 @@ body {
 
 #typed,
 .typed-cursor {
-	font-size: 36px;
+	font-size: 32px;
 
 	@media #{$phone-info} {
-		font-size: 24px;
+		font-size: 20px;
 	}
 
 	@media #{$desktop-info} {
-		font-size: 48px;
+		font-size: 40px;
 	}
 }
 
@@ -38,11 +38,16 @@ body {
 
 .container {
 	width: 100vw;
-	height: calc(100vh - 56px - 50px);
-	margin-top: 50px;
+	height: calc(100vh - 80px);
+	margin-top: 80px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
+
+	@media #{$desktop-info} {
+		margin-top: 100px;
+		height: calc(100vh - 100px);
+	}
 }
 
 .app-button {
