--- a/src/styles/intro.module.scss
+++ b/src/styles/intro.module.scss
@@ -7,25 +7,27 @@
 
 	@media #{$desktop-info} {
 		padding-left: 150px;
+		padding-right: 150px;
 	}
 }
 
 .sub-heading {
 	margin: 5px 0px;
-	font-size: 20px;
+	font-size: 18px;
 
 	@media #{$phone-info} {
 		font-size: 16px;
 	}
 
 	@media #{$desktop-info} {
-		font-size: 24px;
+		font-size: 20px;
 	}
 }
 
 .intro {
 	margin-top: 70px;
 	line-height: 30px;
+	max-width: 900px;
 
 	@media #{$phone-info} {
 		margin-top: 40px;
@@ -34,7 +36,6 @@
 	@media #{$desktop-info} {
 		line-height: 40px;
 		margin-top: 100px;
-		margin-right: 25vw;
 	}
 }
 
