--- a/src/styles/toolbox.module.scss
+++ b/src/styles/toolbox.module.scss
@@ -8,20 +8,16 @@
 	& > div {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		align-items: flex-start;
+
+		@media #{$desktop-info} {
+			padding: 30px 150px;
+		}
 	}
 
 	@media #{$desktop-info} {
 		padding-left: 0px;
 		padding-right: 0px;
-	}
-}
-
-.heading-box {
-	width: 100%;
-
-	@media #{$desktop-info} {
-		width: calc(100% - 300px);
 	}
 }
 
@@ -58,13 +54,13 @@
 .toolbox {
 	display: flex;
 	flex-wrap: wrap;
-	width: calc(100% + 30px);
+	width: 100%;
 	justify-content: center;
 	margin-top: 50px;
 
 	img {
 		height: 5vw;
-		min-height: 40px;
+		min-height: 35px;
 		margin: 15px;
 		opacity: 0;
 		transition: opacity ease-in-out 300ms;
@@ -81,10 +77,5 @@
 
 	@media #{$phone-info} {
 		margin-top: 35px;
-		width: calc(100% + 20px);
-	}
-
-	@media #{$desktop-info} {
-		width: calc(100% - 300px);
 	}
 }
