--- a/src/styles/experience.module.scss
+++ b/src/styles/experience.module.scss
@@ -7,7 +7,7 @@
 	& > div {
 		display: flex;
 		flex-direction: column;
-		align-items: center;
+		align-items: flex-start;
 
 		@media #{$desktop-info} {
 			margin: 30px 150px;
@@ -52,6 +52,10 @@
 
 .company-work-desc {
 	height: 415px;
+
+	@media #{$desktop-info} {
+		height: 50vh;
+	}
 }
 
 .companies-list {
